Use transpile + python for SUP smoke tests

--- a/.github/workflows/brew-test.yml
+++ b/.github/workflows/brew-test.yml
@@ -43,6 +43,7 @@ jobs:
             print "Hello, SUP!"
           bye
           EOF
-          sup hello.sup | grep "Hello, SUP!"
+          sup transpile --emit python hello.sup > hello.py
+          python3 hello.py | grep "Hello, SUP!"
 
 
